syntax = "proto3";

package calculator;

option go_package = "/calculatorpb";

message AddRequest {
  int64 number1 = 1;
  int64 number2 = 2;
}

message AdddResponse {
  int64 result = 1;
}

service CalculatorService {
  rpc Add (AddRequest) returns (AdddResponse) {};
}